Fix SelectMimicry chevron icon vertical alignment

--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -70,7 +70,7 @@
 
 .Select--multiline .Icon {
   top: 50%;
-  transform: translateY(-50%);
+  margin-top: -12px;
   }
 
 .Select--ios {}
